src/test/ui/impl-trait/issues/issue-54895.stderr
error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/issue-54895.rs:15:53
   |
LL | fn f() -> impl for<'a> Trait<'a, Out = impl Sized + 'a> {
   |                                                     ^^
   |
note: lifetime declared here
  --> $DIR/issue-54895.rs:15:20
   |
LL | fn f() -> impl for<'a> Trait<'a, Out = impl Sized + 'a> {
   |                    ^^

error: aborting due to previous error

